<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rate The Instructor</string>
    <string name="fname">First Name :</string>
    <string name="sname">Last Name :</string>
    <string name="office">Office :</string>
    <string name="phone">Phone :</string>
    <string name="email">Email :</string>
    <string name="average">Average Rating :</string>
    <string name="total">Total Rating :</string>
    <string name="ratings">Rating :</string>
    <string name="rate">Rate</string>
    <string name="viewComments">View More</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="here">Add Comments here</string>
    <string name="Comments">Comments</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Instructor Details</string>
    <string name="title_activity_test">testActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_comments">Comments</string>

</resources>
