<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableLayout
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textStyle="bold"
                android:textColor="#800000"
                android:text="@string/fname"/>
            <TextView
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textColor="#000000"
                android:id="@+id/fname"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textStyle="bold"
                android:textColor="#800000"
                android:text="@string/sname"/>

            <TextView
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textColor="#000000"
                android:id="@+id/sname"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textStyle="bold"
                android:textColor="#800000"
                android:text="@string/office"/>
            <TextView
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textColor="#000000"
                android:id="@+id/office"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textStyle="bold"
                android:textColor="#800000"
                android:text="@string/phone"/>
            <TextView
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textColor="#000000"
                android:id="@+id/phone"/>
        </TableRow>


        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textStyle="bold"
                android:textColor="#800000"
                android:text="@string/email"/>
            <TextView
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textColor="#000000"
                android:id="@+id/email"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textStyle="bold"
                android:textColor="#800000"
                android:text="@string/ratings"/>
            <TextView
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textColor="#000000"
                android:id="@+id/avg"/>
        </TableRow>
        <TableRow>
            <TextView
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:paddingTop="15dip"
               android:paddingLeft="35dip"
               android:textColor="#800000"
               android:text="@string/total" />
            <TextView
                android:paddingTop="15dip"
                android:paddingLeft="15dip"
                android:textColor="#000000"
                android:id="@+id/total"/>

        </TableRow>

        <TableRow>
            <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="15dip"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="23dip"
            android:text="@string/rate"
            android:textStyle="bold"
            android:background="@drawable/button_green"
            android:id="@+id/rating"/>

           <RatingBar
                android:id="@+id/ratingBar"
                android:layout_marginTop="10dip"
                android:numStars="5"
                android:stepSize="1.0"
                android:rating="0" />
        </TableRow>

        <TableRow>
            <TextView android:text="@string/Comments"
            android:layout_marginTop="5dip"
            android:paddingLeft="15dip"
            android:textStyle="bold"
            android:textColor="#800000"/></TableRow>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="15dip"
            android:id="@+id/commentList"
            tools:ignore="NestedScrolling">
        </ListView>


        <EditText
            android:layout_marginTop="30dip"
            android:id="@+id/editcomment"
            android:layout_height="wrap_content"
            android:hint="@string/here"
            android:focusable="false"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_width="match_parent">
        </EditText>


            <Button
                android:layout_marginTop="20dip"
                android:layout_marginLeft="140dip"
                android:layout_marginRight="140dip"
                android:layout_marginBottom="15dip"
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textStyle="bold"
                android:background="@drawable/button_green"
                android:onClick="runNetworkCode"/>
    </TableLayout>




</ScrollView>
